# haskell

./: .gitignore  LetWhereScope.hs  README.md  WindowExtrema.hs  aeson_example_0.hs  aeson_example_0.input  art.hs  automatic_differentiation.hs  caesar_cipher.hs  class_exploration_1.hs  coin_combos.hs  cs65_hw01.hs  euclid.hs  extremeSubarraySums.hs  fact.hs  fib.hs  foo.hs  gadt_example_0.hs  golomb.hs  imperative_programming_1.hs  imperative_programming_2.hs  lazy_state.hs  mirror_bst.hs  monad_exploration.hs  monad_exploration_2.hs  nonogram.hs  optimization_test_1.hs  parsec_example_0.hs  parsec_example_1.hs  parsec_example_2.hs  parsec_example_3.hs  parsec_example_6.hs  polynomial.hs  primes_simple.hs  pythagorean_triples.hs  queue.hs  quicksort.hs  range.hs  range_min_query.hs  recursive_descent_parser_0.hs  (+13 more)
AdventOfCode-2015/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  12.hs  13.hs  14.hs
BasicConcurrentServer/: BasicServer.hs
Boggle/: Boggle.hs  README  test1.out  test2.out  testboard1.in  testboard2.in  testdictionary1.in  testdictionary2.in
CodeEval/: a_pile_of_bricks.hs  a_pile_of_bricks.in  age_distribution.hs  age_distribution.in  armstrong_numbers.hs  balanced_smileys.hs  balanced_smileys.in  beautiful_strings.hs  beautiful_strings.in  beautiful_strings.out  bit_positions.hs  bit_positions.in  calculate_distance.hs  cash_register.hs  cash_register.in  chain_inspection.hs  chain_inspection.in  city_blocks_flyer.hs  city_blocks_flyer.in  climbing_stairs.hs  closest_pair.hs  closest_pair.in  commuting_engineer.hs  commuting_engineer.in  compressed_sequence.hs  counting_primes.hs  counting_primes.in  cracking_eggs.hs  da_vyncy.hs  da_vyncy.in  da_vyncy.out  data_recovery.hs  data_recovery.in  decimal_to_binary.hs  decimal_to_binary.in  decode_numbers.hs  delta_time.hs  detecting_cycles.hs  detecting_cycles.in  digit_statistics.hs  (+141 more)
Fake/: Bar.hs  Foo.hs
GoogleCodeJam/CoinJam/: CoinJam.hs
GoogleCodeJam/TheLastWord/: 01.out  02.in  (+2 more)
Hashing/: Hashing.hs
MyParallel/: collatz.hs
Nonogram/: Base.hs  Solver.hs  Tests.hs
OpenGL/: DrawingShapes.hs  HelloWorld.hs
PercolationTheory/: stack.yaml
ProjectEuler/: 001.hs  002.hs  003.hs  004.hs  005.hs  006.hs  007.hs  008.hs  009.hs  010.hs  011.hs  012.hs  013.hs  014.hs  015.hs  016.hs  017.hs  018.hs  019.hs  020.hs  021.hs  022.hs  023.hs  023_alternate.hs  024.hs  025.hs  026.hs  027.hs  028.hs  029.hs  030.hs  031.hs  032.hs  033.hs  034.hs  035.hs  036.hs  037.hs  038.hs  039.hs  (+79 more)
Rosalind/: CONS.hs  CONS.in  CONS.out  DNA.hs  DNA.in  FIB.hs  FIBD.hs  GC.hs  GC.in  GRPH.hs  GRPH.in  GRPH.out  HAMM.hs  HAMM.in  IEV.hs  IPRB.hs  LCSM.hs  LCSM.in  LCSM.out  LEXF.hs  LEXF.in  LEXF.out  LEXV.hs  LEXV.in  LEXV.out  LIA.hs  MRNA.hs  MRNA.in  PDST.hs  PDST.in  PDST.out  PERM.hs  PERM.out  PPER.hs  PROB.hs  PROB.in  PROB.out  PROT.hs  PROT.in  PROT.out  (+24 more)
Secretary/: Main.hs  Strategies.hs
SimpleChatServer/: SimpleChatServer.hs
StreamingMedian/: StreamingMedian.hs  Test.hs
VTY/: 2048.hs  Life.hs  Virus.hs
hello-world/: Simple.hs  SimpleImport.hs  UserDefinedTypeclass.hs  WindowExtrema.hs  ackermann.hs  alternatives_to_if.hs  class_exploration_2.hs  clockwise_spiral.hs  command_line_arguments.hs  data_map.hs  dequeue.hs  error_handling_0.hs  factor.hs  farey.hs  flood_fill.hs  golomb.hs  helloworld.hs  hill.hs  integer_partitions.hs  lagrange_polynomials.hs  lazy_state.hs  length.hs  matrix_multiply.hs  mc_integration.hs  monad_exploration_1.hs  monad_exploration_2.hs  nqueens.hs  optimization_test_1.hs  pair_partitions.hs  poker.hs  powmod.hs  pythagorean_triples.hs  qmc_integration.hs  random_numbers.hs  recursive_descent_parser_1.hs  rex_hw01.hs  sequences.hs  shortest_anagram_subsequence.hs  split_stream.hs  sudoku.hs  (+4 more)
parsec/: parsec_example_1.hs  parsec_example_4.hs  parsec_example_5.hs  parsec_example_7.hs  parsec_example_8.hs
poker/: README.md  poker.cabal
project-euler/: README.md  project-euler.cabal  stack.yaml
project-euler/app/: Main.hs
project-euler/data/: 059.in  099.in
project-euler/src/Experimental/: 060.hs  061.hs  248.hs
project-euler/src/Old/: 001.hs  002.hs  008.hs  009.hs  012.hs  023.hs  044.hs  075.hs  079.hs  091.hs  108.hs  119.hs  132.hs  149.hs  155.hs  240.hs  301.hs
project-euler/src/Problems/: P001.hs  P002.hs  P003.hs  P004.hs  P005.hs  P006.hs  P007.hs  P008.hs  P009.hs  P010.hs  P011.hs  P012.hs  P013.hs  P014.hs  P015.hs  P016.hs  P017.hs  P018.hs  P019.hs  P020.hs  P021.hs  P022.hs  P023.hs  P024.hs  P025.hs  P026.hs  P027.hs  P028.hs  P029.hs  P030.hs  P031.hs  P032.hs  P033.hs  P034.hs  P035.hs  P036.hs  P037.hs  P038.hs  P039.hs  P040.hs  (+83 more)
project-euler/src/Util/: List.hs  Math.hs  Prime.hs
project-euler/test/Problems/: P003Spec.hs  P004Spec.hs  P005Spec.hs  P006Spec.hs  P007Spec.hs  P009Spec.hs  P011Spec.hs  P015Spec.hs  P018Spec.hs  P021Spec.hs  P022Spec.hs  P027Spec.hs  P031Spec.hs  P034Spec.hs  P037Spec.hs  P038Spec.hs  P045Spec.hs  P046Spec.hs  P047Spec.hs  P048Spec.hs  P050Spec.hs  P055Spec.hs  P056Spec.hs  P059Spec.hs  P063Spec.hs  P065Spec.hs  P067Spec.hs  P072Spec.hs  P077Spec.hs  P091Spec.hs  P101Spec.hs  P108Spec.hs  P110Spec.hs  P115Spec.hs  P116Spec.hs  P132Spec.hs  P147Spec.hs  P149Spec.hs  P150Spec.hs  P164Spec.hs  (+8 more)
project-euler/tests/Problems/: P001Spec.hs  P001Test.hs  P002Spec.hs  P002Test.hs  P003Spec.hs  P003Test.hs  P004Spec.hs  P004Test.hs  P005Spec.hs  P005Test.hs  P006Spec.hs  P006Test.hs  P007Test.hs  P008Spec.hs  P008Test.hs  P009Test.hs  P010Spec.hs  P010Test.hs  P011Test.hs  P012Spec.hs  P012Test.hs  P013Spec.hs  P013Test.hs  P014Spec.hs  P014Test.hs  P015Test.hs  P016Spec.hs  P016Test.hs  P017Spec.hs  P017Test.hs  P018Test.hs  P019Spec.hs  P019Test.hs  P020Spec.hs  P020Test.hs  P021Test.hs  P022Test.hs  P023Spec.hs  P023Test.hs  P024Spec.hs  (+150 more)
project-euler/tests/TestData/: P008.hs  P011.hs  P013.hs  P018.hs  P022.hs  P042.hs  P054.hs  P059.hs  P067.hs  P079.hs  P099.hs  P102.hs
project-euler/tests/Util/: PrimeTest.hs
project_euler/: 006.hs  007.hs  011.hs  015.hs  016.hs  017.hs  022.hs  022.in
(+84 files in other folders)
