name:                project-euler
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/project-euler#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , array >= 0.5
                     , containers >= 0.5
  default-extensions:  NumDecimals
  exposed-modules:     Util.List
                     , Util.Math
                     , Util.Prime
                     , Problems.P001
                     , Problems.P002
                     , Problems.P003
                     , Problems.P004
                     , Problems.P005
                     , Problems.P006
                     , Problems.P007
                     , Problems.P008
                     , Problems.P009
                     , Problems.P010
                     , Problems.P011
                     , Problems.P012
                     , Problems.P013
                     , Problems.P014
                     , Problems.P015
                     , Problems.P016
                     , Problems.P017
                     , Problems.P018
                     , Problems.P019
                     , Problems.P020
                     , Problems.P021
                     , Problems.P022
                     , Problems.P023
                     , Problems.P024
                     , Problems.P025
                     , Problems.P026
                     , Problems.P027
                     , Problems.P028
                     , Problems.P029
                     , Problems.P030
                     , Problems.P031
                     , Problems.P032
                     , Problems.P033
                     , Problems.P034
                     , Problems.P035
                     , Problems.P036
                     , Problems.P037
                     , Problems.P038
                     , Problems.P039
                     , Problems.P040
                     , Problems.P041
                     , Problems.P042
                     , Problems.P043
                     , Problems.P044
                     , Problems.P045
                     , Problems.P046
                     , Problems.P047
                     , Problems.P048
                     , Problems.P049
                     , Problems.P050
                     , Problems.P051
                     , Problems.P052
                     , Problems.P053
                     , Problems.P054
                     , Problems.P055
                     , Problems.P056
                     , Problems.P057
                     , Problems.P058
                     , Problems.P059
                     , Problems.P062
                     , Problems.P063
                     , Problems.P065
                     , Problems.P067
                     , Problems.P069
                     , Problems.P072
                     , Problems.P076
                     , Problems.P077
                     , Problems.P079
                     , Problems.P085
                     , Problems.P087
                     , Problems.P091
                     , Problems.P097
                     , Problems.P099
                     , Problems.P101
                     , Problems.P108
                     , Problems.P110
                     , Problems.P112
                     , Problems.P114
                     , Problems.P115
                     , Problems.P116
                     , Problems.P117
                     , Problems.P119
                     , Problems.P122
                     , Problems.P124
                     , Problems.P125
                     , Problems.P129
                     , Problems.P130
                     , Problems.P132
                     , Problems.P147
                     , Problems.P149
                     , Problems.P150
                     , Problems.P157
                     , Problems.P164
                     , Problems.P178
                     , Problems.P181
                     , Problems.P183
                     , Problems.P188
                     , Problems.P190
                     , Problems.P191
                     , Problems.P197
                     , Problems.P200
                     , Problems.P201
                     , Problems.P203
                     , Problems.P204
                     , Problems.P205
                     , Problems.P206
                     , Problems.P209
                     , Problems.P235
                     , Problems.P240
                     , Problems.P249
                     , Problems.P250
                     , Problems.P301
                     , Problems.P317
  default-language:    Haskell2010

executable project-euler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , project-euler
  default-language:    Haskell2010

test-suite project-euler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Tasty.hs
  other-modules:       Util.PrimeTest
                     , Problems.P001Test
                     , Problems.P002Test
                     , Problems.P003Test
                     , Problems.P004Test
                     , Problems.P005Test
                     , Problems.P006Test
                     , Problems.P007Test
                     , Problems.P008Test , TestData.P008
                     , Problems.P009Test
                     , Problems.P010Test
                     , Problems.P011Test , TestData.P011
                     , Problems.P012Test
                     , Problems.P013Test , TestData.P013
                     , Problems.P014Test
                     , Problems.P015Test
                     , Problems.P016Test
                     , Problems.P017Test
                     , Problems.P018Test , TestData.P018
                     , Problems.P019Test
                     , Problems.P020Test
                     , Problems.P021Test
                     , Problems.P022Test , TestData.P022
                     , Problems.P023Test
                     , Problems.P024Test
                     , Problems.P025Test
                     , Problems.P026Test
                     , Problems.P027Test
                     , Problems.P028Test
                     , Problems.P029Test
                     , Problems.P030Test
                     , Problems.P031Test
                     , Problems.P032Test
                     , Problems.P033Test
                     , Problems.P034Test
                     , Problems.P035Test
                     , Problems.P036Test
                     , Problems.P037Test
                     , Problems.P038Test
                     , Problems.P039Test
                     , Problems.P040Test
                     , Problems.P041Test
                     , Problems.P042Test , TestData.P042
                     , Problems.P043Test
                     , Problems.P044Test
                     , Problems.P045Test
                     , Problems.P046Test
                     , Problems.P047Test
                     , Problems.P048Test
                     , Problems.P049Test
                     , Problems.P050Test
                     , Problems.P051Test
                     , Problems.P052Test
                     , Problems.P053Test
                     , Problems.P054Test , TestData.P054
                     , Problems.P055Test
                     , Problems.P056Test
                     , Problems.P057Test
                     , Problems.P058Test
                     , Problems.P059Test , TestData.P059
                     , Problems.P062Test
                     , Problems.P063Test
                     , Problems.P065Test
                     , Problems.P067Test , TestData.P067
                     , Problems.P069Test
                     , Problems.P072Test
                     , Problems.P076Test
                     , Problems.P077Test
                     , Problems.P079Test , TestData.P079
                     , Problems.P085Test
                     , Problems.P087Test
                     , Problems.P091Test
                     , Problems.P097Test
                     , Problems.P099Test , TestData.P099
                     , Problems.P101Test
                     , Problems.P108Test
                     , Problems.P110Test
                     , Problems.P112Test
                     , Problems.P114Test
                     , Problems.P115Test
                     , Problems.P116Test
                     , Problems.P117Test
                     , Problems.P119Test
                     , Problems.P122Test
                     , Problems.P124Test
                     , Problems.P125Test
                     , Problems.P129Test
                     , Problems.P130Test
                     , Problems.P132Test
                     , Problems.P147Test
                     , Problems.P149Test
                     , Problems.P150Test
                     , Problems.P157Test
                     , Problems.P164Test
                     , Problems.P178Test
                     , Problems.P181Test
                     , Problems.P183Test
                     , Problems.P188Test
                     , Problems.P190Test
                     , Problems.P191Test
                     , Problems.P197Test
                     , Problems.P200Test
                     , Problems.P201Test
                     , Problems.P203Test
                     , Problems.P204Test
                     , Problems.P205Test
                     , Problems.P206Test
                     , Problems.P209Test
                     , Problems.P235Test
                     , Problems.P240Test
                     , Problems.P249Test
                     , Problems.P250Test
                     , Problems.P301Test
                     , Problems.P317Test
  build-depends:       base
                     , project-euler
                     , tasty
                     , tasty-discover
                     , array
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/project-euler
